# taskolib

./: .gitignore  .gitlab-ci.yml  LIBNO  LICENSE.txt  README.md  libavtomat.pc.in  make-doc.py  meson.build  meson_options.txt
.github/workflows/: build_and_run_tests.yml  ci.yml  doxygen.yml
data/: Doxyfile  doxygen.h  doxygen_layout.xml  style.css
data/documents/: Evolving Design.odt
debian/: changelog  check_changelog  check_control  clean  control  copyright  libtaskomat-dev.install  libtaskomat.install.in  postinst  rules  taskolib-dev.install
docs/: CommChannel_8h.html  CommChannel_8h__dep__incl.map  CommChannel_8h__dep__incl.md5  CommChannel_8h__incl.map  CommChannel_8h__incl.md5  CommChannel_8h_source.html  Context_8h.html  Context_8h__dep__incl.map  Context_8h__dep__incl.md5  Context_8h__incl.map  Context_8h__incl.md5  Context_8h_source.html  Error_8h.html  Error_8h__dep__incl.map  Error_8h__dep__incl.md5  Error_8h__incl.map  Error_8h__incl.md5  Error_8h_source.html  Executor_8cc.html  Executor_8cc__incl.map  Executor_8cc__incl.md5  Executor_8h.html  Executor_8h__dep__incl.map  Executor_8h__dep__incl.md5  Executor_8h__incl.map  Executor_8h__incl.md5  Executor_8h_source.html  GitObjectWrapper_8cc.html  GitObjectWrapper_8cc__incl.map  GitObjectWrapper_8cc__incl.md5  GitObjectWrapper_8h.html  GitObjectWrapper_8h__dep__incl.map  GitObjectWrapper_8h__dep__incl.md5  GitObjectWrapper_8h__incl.map  GitObjectWrapper_8h__incl.md5  GitObjectWrapper_8h_source.html  GitRepository_8cc.html  GitRepository_8cc__incl.map  GitRepository_8cc__incl.md5  GitRepository_8h.html  (+364 more)
examples/: execute_step.cc
include/: meson.build
include/avtomat/: Context.h  Error.h  LuaState.h  Sequence.h  Step.h  VariableName.h  avtomat.h  execute_step.h
include/taskolib/: CommChannel.h  Context.h  Executor.h  GitObjectWrapper.h  GitRepository.h  GitWrapper.h  LockedQueue.h  Message.h  Sequence.h  SequenceManager.h  SequenceName.h  Step.h  StepIndex.h  Tag.h  Timeout.h  TimeoutTrigger.h  UniqueId.h  VariableName.h  console.h  default_message_callback.h  deserialize_sequence.h  exceptions.h  execute_lua_script.h  format.h  hash_string.h  serialize_sequence.h  taskolib.h  time_types.h
include/taskolib/lua/: luaconf.h
include/taskolib/sol/sol/: config.hpp  sol.hpp
include/taskomat/: CommChannel.h  Context.h  Error.h  Executor.h  LockedQueue.h  Message.h  Sequence.h  SequenceManager.h  Step.h  StepIndex.h  Taskomat.h  VariableName.h  avtomat.h  case_string.h  console.h  deserialize_sequence.h  exceptions.h  execute_sequence.h  execute_step.h  format.h  hash_string.h  serialize_sequence.h  taskomat.h  time_types.h
include/taskomat/sol/sol/: config.hpp  sol.hpp
playground/: meson.build  run_lua.cc  run_lua_with_timeout.cc  run_sol_variables.cc  run_sol_with_function.cc  script.lua
src/: Context.cc  Executor.cc  GitObjectWrapper.cc  GitRepository.cc  GitWrapper.cc  LuaState.cc  Sequence.cc  SequenceManager.cc  SequenceName.cc  Step.cc  Tag.cc  Taskomat.cc  UniqueId.cc  VariableName.cc  console.cc  default_message_callback.cc  deserialize_sequence.cc  deserialize_sequence.h  execute_lua_script.cc  execute_sequence.cc  execute_step.cc  internals.cc  internals.h  lua_details.cc  lua_details.h  meson.build  send_message.cc  send_message.h  serialize_sequence.cc  serialize_sequence.h  time_types.cc
src/lua/: meson.build
subprojects/: catch2.wrap  gul17.wrap  libgit4cpp.wrap  libgul14.wrap
tests/: internals_unit_test.h  meson.build  test_CommChannel.cc  test_Context.cc  test_Error.cc  test_Executor.cc  test_GitRepository.cc  test_GitWrapper.cc  test_LockedQueue.cc  test_LuaState.cc  test_Message.cc  test_Sequence.cc  test_SequenceManager.cc  test_SequenceName.cc  test_Step.cc  test_Tag.cc  test_Taskomat.cc  test_TimePoint.cc  test_Timeout.cc  test_TimeoutTrigger.cc  test_UniqueId.cc  test_VariableName.cc  test_deserialize_sequence.cc  test_exceptions.cc  test_execute_lua_script.cc  test_execute_sequence.cc  test_execute_step.cc  test_format.cc  test_internals.cc  test_lua_details.cc  test_main.cc  test_self_containment.cc.in  test_send_message.cc  test_serialize_sequence.cc  test_time_types.cc
tools/: make-doc.py
