sources = files(
    'default_message_callback.cc',
    'deserialize_sequence.cc',
    'execute_lua_script.cc',
    'Executor.cc',
    'internals.cc',
    'lua_details.cc',
    'send_message.cc',
    'Sequence.cc',
    'SequenceManager.cc',
    'serialize_sequence.cc',
    'Step.cc',
    'time_types.cc',
    'VariableName.cc',
    'GitWrapper.cc'
)
