sources = files(
    'default_message_callback.cc',
    'deserialize_sequence.cc',
    'execute_lua_script.cc',
    'Executor.cc',
    'internals.cc',
    'lua_details.cc',
    'send_message.cc',
    'Sequence.cc',
    'SequenceManager.cc',
    'SequenceName.cc',
    'serialize_sequence.cc',
    'Step.cc',
    'Tag.cc',
    'time_types.cc',
    'UniqueId.cc',
    'VariableName.cc',
)
